fotter updtaed with the new disclamer

--- a/ebd75a/index.html
+++ b/ebd75a/index.html
@@ -193,11 +193,21 @@
   </div>
 </section>
 <footer class="container3 calign bg-black white">
-  <ul class="footlink">
-    <p>© 2020-2022. WE (Aadhar Homes) ARE AN AUTHORISED CHANNEL PARTNER OF EMAAR INDIA</p>
-    <li><i class="icon-call-center"> </i> 9811750130</li>
-    <li>Emaar EBD 75A</li>
-  </ul>
+  <div class="rera-info" style="margin-top: 20px; margin-bottom: 30px; font-size: 12px; line-height: 1.4; text-align: left; max-width: 800px; margin-left: auto; margin-right: auto;">
+    <p><strong>Project Registered under Government of Haryana RERA Act 2016</strong></p>
+    <p><strong>Government RERA Authorised Advertiser's:</strong> AADHAR HOMES - Office : 806, ILD Trade Centre Sector 47 Gurgaon</p>
+    <p><strong>Authorised Advertiser's:</strong> AADHAR HOMES - Office : 806, ILD Trade Centre Sector 47 Gurgaon</p>
+    <p><strong>Godrej Site Address:</strong> Emaar India Sales</p>
+    <p><strong>Contact:</strong> Emaar Corporate Office: Emaar India Sales Office</p>
+    
+    <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #ccc;">
+      <p><strong>Disclaimer:</strong> The content provided on this website is for information purposes only and does not constitute an offer to avail any services. The prices mentioned are subject to change without prior notice, and the availability of properties mentioned is not guaranteed. The images displayed on the website are for representation purposes only and may not reflect the actual properties accurately.</p>
+    </div>
+  </div>
+  
+  <!-- <div style="border-top: 2px solid #555; padding-top: 20px; margin-top: 20px;">
+    <p style="font-size: 14px; font-weight: bold; color: #fff; margin: 0; text-transform: uppercase;">© 2020-2022. WE (Aadhar Homes) ARE AN AUTHORISED CHANNEL PARTNER OF EMAAR INDIA</p>
+  </div> -->
 </footer>
 <div class="enquiry bg-blue">
   <div class="enquire-button bg-green shake white calign"><i class="icon-mail"></i></div>
