--- a/ebd83/index.html
+++ b/ebd83/index.html
@@ -192,9 +192,22 @@
     <h6 class="white"> Follow Us:</h6>
     <div class="social-icon"> <span class="pad-icon"><a href=""><img src="assets/icon/facebook.svg" alt="EBD 83" width="40"></a></span> <span class="pad-icon"><a href=""><img src="assets/icon/twitter.svg" alt="EBD 83" width="40"></a></span> <span class="pad-icon"><a href=""><img src="assets/icon/youtube.svg" alt="EBD 83" width="40"></a></span> <span class="pad-icon"><a href=""><img src="assets/icon/instagram.svg" alt="EBD 83" width="40"></a></span> <span class="pad-icon"><a href="https://wa.me/+919811750130" target="_blank"><img src="assets/icon/whatsapp.svg" alt="EBD 83" width="40"></a></span> </div>
   </div>
-  <div class="col-sm-6 nopad">
-    <p class="copyright white">© 2024 All Rights Reserved | EBD 83</p>
+  
+  <div class="rera-info" style="margin-top: 20px; margin-bottom: 30px; font-size: 12px; line-height: 1.4; text-align: left; max-width: 800px; margin-left: auto; margin-right: auto; color: white;">
+    <p><strong>Project Registered under Government of Haryana RERA Act 2016</strong></p>
+    <p><strong>Government RERA Authorised Advertiser's:</strong> AADHAR HOMES - Office : 806, ILD Trade Centre Sector 47 Gurgaon</p>
+    <p><strong>Authorised Advertiser's:</strong> AADHAR HOMES - Office : 806, ILD Trade Centre Sector 47 Gurgaon</p>
+    <p><strong>Godrej Site Address:</strong> Emaar India Sales</p>
+    <p><strong>Contact:</strong> Emaar Corporate Office: Emaar India Sales Office</p>
+    
+    <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #ccc;">
+      <p><strong>Disclaimer:</strong> The content provided on this website is for information purposes only and does not constitute an offer to avail any services. The prices mentioned are subject to change without prior notice, and the availability of properties mentioned is not guaranteed. The images displayed on the website are for representation purposes only and may not reflect the actual properties accurately.</p>
+    </div>
   </div>
+  
+  <!-- <div style="border-top: 2px solid #555; padding-top: 20px; margin-top: 20px; width: 100%;">
+    <p class="copyright white" style="font-size: 14px; font-weight: bold; margin: 0; text-transform: uppercase;">© 2024. WE (Aadhar Homes) ARE AN AUTHORISED CHANNEL PARTNER OF EMAAR INDIA</p>
+  </div> -->
 </div>
 <!-----Address & Social icons end-----> 
 
