--- a/ebd99/index.html
+++ b/ebd99/index.html
@@ -1959,7 +1959,7 @@ li.fancybox-thumbs-loading {
 </section>
 <footer class="container3 calign bg-black white">
   <ul class="footlink">
-    <p>© 2020-2021. WE (Aadhar Homes) ARE AN AUTHORISED CHANNEL PARTNER OF EMAAR INDIA</p>
+    <!-- <p>© 2020-2021. WE (Aadhar Homes) ARE AN AUTHORISED CHANNEL PARTNER OF EMAAR INDIA</p> -->
     <li><i class="icon-call-center"> </i> 9811750130</li>
     <li>Emaar EBD 99</li>
   </ul>
