disclaer chnages and upated

--- a/ebd89/index.html
+++ b/ebd89/index.html
@@ -1996,8 +1996,8 @@ li.fancybox-thumbs-loading {
     <p><strong>Project Registered under Government of Haryana RERA Act 2016</strong></p>
     <p><strong>Government RERA Authorised Advertiser's:</strong> AADHAR HOMES - Office : 806, ILD Trade Centre Sector 47 Gurgaon</p>
     <p><strong>Authorised Advertiser's:</strong> AADHAR HOMES - Office : 806, ILD Trade Centre Sector 47 Gurgaon</p>
-    <p><strong>Godrej Site Address:</strong> Emaar India Sales</p>
-    <p><strong>Contact:</strong> Emaar Corporate Office: Emaar India Sales Office</p>
+    <p><strong>Emaar Site Address:</strong> Emaar India limited Sales</p>
+    <p><strong>Contact:</strong> Emaar Corporate Office: Emaar India limited Sales Office</p>
     
     <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #ccc;">
       <p><strong>Disclaimer:</strong> The content provided on this website is for information purposes only and does not constitute an offer to avail any services. The prices mentioned are subject to change without prior notice, and the availability of properties mentioned is not guaranteed. The images displayed on the website are for representation purposes only and may not reflect the actual properties accurately.</p>
