--- a/ebd65nxt/index.html
+++ b/ebd65nxt/index.html
@@ -24,8 +24,15 @@
 <body>
 <header class="topheader">
   <div class="container-fluid">
-    <div class="main-logo"> <a href="https://www.emaarsco.in/ebd65nxt/"><img
-            src="assets/images/logo.webp" alt="EBD 65 Nxt"></a> </div>
+    <div class="main-logo"> 
+      <a href="https://www.emaarsco.in/ebd65nxt/" style="text-decoration: none; color: inherit;">
+        <div style="text-align: left; line-height: 1.2;">
+          <div style="font-size: 32px; font-weight: bold; color: #333; font-family: Arial, sans-serif; letter-spacing: 1px;">EBD65NXT</div>
+          <div style="font-size: 12px; font-weight: bold; color: #333; font-family: Arial, sans-serif; margin-top: 1px;">AADHAR HOMES</div>
+          <div style="font-size: 10px; color: #666; font-family: Arial, sans-serif; margin-top: 1px;">AUTHORISED CHANNEL PARTNER</div>
+        </div>
+      </a>
+    </div>
     <ul class="nav topnav justify-content-end">
       <li class="nav-item">
         <div class="right"><a class="relative block" href="tel:+919811750130">
