--- a/ebd75a/index.html
+++ b/ebd75a/index.html
@@ -24,8 +24,16 @@
 </script>
 </head>
 <body>
-<header>
-  <div class="left"> <a href="https://www.emaarsco.in/ebd75a/" title="Emaar EBD 75A"><img src="assets/images/ebd-75a.webp" alt="Emaar EBD 75A" class="logo"></a></div>
+<header style="padding: 15px 0;">
+  <div class="left"> 
+    <a href="https://www.emaarsco.in/ebd75a/" title="Emaar EBD 75A" style="text-decoration: none; color: inherit;">
+      <div style="text-align: left; line-height: 1.2;">
+        <div style="font-size: 32px; font-weight: bold; color: #333; font-family: Arial, sans-serif; letter-spacing: 1px;">EBD75A</div>
+        <div style="font-size: 12px; font-weight: bold; color: #333; font-family: Arial, sans-serif; margin-top: 1px;">AADHAR HOMES</div>
+        <div style="font-size: 10px; color: #666; font-family: Arial, sans-serif; margin-top: 1px;">AUTHORISED CHANNEL PARTNER</div>
+      </div>
+    </a>
+  </div>
   <div class="contact right black clear blue" onclick="window.location.href='tel:+91 9811750130';"><i class="icon-call-center"> </i> <strong>9811-750-130</strong></div>
 </header>
 <section class="home bg-blue relative clear">
